<resources>
    <string name="app_name">Demo Custom Annotation Processor</string>
    <string name="cars">Cars</string>
    <string name="make">Make</string>
    <string name="model">Model</string>
    <string name="price">Price</string>
    <string name="save">Save</string>
    <string name="show_cars">Show Cars</string>
    <string name="show_persons">Show Persons</string>
    <string name="empty">_</string>
    <string name="age">Age</string>
    <string name="name">Name</string>
</resources>